@@ -34,25 +34,19 @@ import com.webcohesion.enunciate.modules.jackson.JacksonModule;
 import com.webcohesion.enunciate.modules.jackson.api.impl.SyntaxImpl;
 import com.webcohesion.enunciate.modules.jackson.model.TypeDefinition;
 import com.webcohesion.enunciate.modules.jackson.model.util.JacksonCodeErrors;
-import com.webcohesion.enunciate.modules.jackson1.EnunciateJackson1Context;
-import com.webcohesion.enunciate.modules.jackson1.Jackson1Module;
-import com.webcohesion.enunciate.modules.jackson1.model.util.Jackson1CodeErrors;
 import com.webcohesion.enunciate.modules.jaxrs.JaxrsModule;
 import com.webcohesion.enunciate.util.freemarker.*;
 import freemarker.cache.URLTemplateLoader;
-import freemarker.core.Environment;
 import freemarker.template.Configuration;
 import freemarker.template.Template;
 import freemarker.template.TemplateException;
-import freemarker.template.TemplateExceptionHandler;
-import org.apache.commons.configuration.HierarchicalConfiguration;
+import org.apache.commons.configuration2.HierarchicalConfiguration;
 
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.DeclaredType;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.io.Writer;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.*;
@@ -63,7 +57,6 @@ import java.util.*;
 public class JavaScriptClientModule extends BasicGeneratingModule implements ApiFeatureProviderModule {
 
   JacksonModule jacksonModule;
-  Jackson1Module jackson1Module;
   JaxrsModule jaxrsModule;
 
   /**
@@ -76,15 +69,11 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
 
   @Override
   public List<DependencySpec> getDependencySpecifications() {
-    return Arrays.asList((DependencySpec) new DependencySpec() {
+    return List.of(new DependencySpec() {
       @Override
       public boolean accept(EnunciateModule module) {
         if (module instanceof JacksonModule) {
           jacksonModule = (JacksonModule) module;
-          return true;
-        }
-        else if (module instanceof Jackson1Module) {
-          jackson1Module = (Jackson1Module) module;
           return true;
         }
         else if (module instanceof JaxrsModule) {
@@ -102,16 +91,14 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
 
       @Override
       public String toString() {
-        return "optional jackson, optional jackson1, optional jaxrs";
+        return "jackson, optional jaxrs";
       }
     });
   }
 
   @Override
   public void call(EnunciateContext context) {
-    if ((this.jacksonModule == null || this.jacksonModule.getJacksonContext() == null || this.jacksonModule.getJacksonContext().getTypeDefinitions().isEmpty()) &&
-      (this.jackson1Module == null || this.jackson1Module.getJacksonContext() == null || this.jackson1Module.getJacksonContext().getTypeDefinitions().isEmpty()))
-    {
+    if (this.jacksonModule == null || this.jacksonModule.getJacksonContext() == null || this.jacksonModule.getJacksonContext().getTypeDefinitions().isEmpty()) {
       info("No Jackson JSON data types: JavaScript client will not be generated.");
       return;
     }
@@ -119,55 +106,39 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
     detectAccessorNamingErrors();
 
     Map<String, String> packageToNamespaceConversions = getPackageToNamespaceConversions();
-    List<DecoratedTypeElement> schemaTypes = new ArrayList<DecoratedTypeElement>();
+    List<DecoratedTypeElement> schemaTypes = new ArrayList<>();
     ExtensionDepthComparator comparator = new ExtensionDepthComparator();
-    EnunciateJacksonContext jacksonContext = null;
-    EnunciateJackson1Context jackson1Context = null;
-
-    if (this.jacksonModule != null) {
-      jacksonContext = this.jacksonModule.getJacksonContext();
-      for (TypeDefinition typeDefinition : jacksonContext.getTypeDefinitions()) {
-        String pckg = typeDefinition.getPackage().getQualifiedName().toString();
-        if (!packageToNamespaceConversions.containsKey(pckg)) {
-          packageToNamespaceConversions.put(pckg, packageToNamespace(pckg));
-        }
-
-        int position = Collections.binarySearch(schemaTypes, typeDefinition, comparator);
-        if (position < 0) {
-          position = -position - 1;
-        }
-        schemaTypes.add(position, typeDefinition);
+    EnunciateJacksonContext jacksonContext = this.jacksonModule.getJacksonContext();
+    for (TypeDefinition typeDefinition : jacksonContext.getTypeDefinitions()) {
+      String pckg = typeDefinition.getPackage().getQualifiedName().toString();
+      if (!packageToNamespaceConversions.containsKey(pckg)) {
+        packageToNamespaceConversions.put(pckg, packageToNamespace(pckg));
       }
-    }
 
-    if (this.jackson1Module != null) {
-      jackson1Context = this.jackson1Module.getJacksonContext();
-      for (com.webcohesion.enunciate.modules.jackson1.model.TypeDefinition typeDefinition : jackson1Context.getTypeDefinitions()) {
-        String pckg = typeDefinition.getPackage().getQualifiedName().toString();
-        if (!packageToNamespaceConversions.containsKey(pckg)) {
-          packageToNamespaceConversions.put(pckg, packageToNamespace(pckg));
-        }
-        schemaTypes.add(typeDefinition);
+      int position = Collections.binarySearch(schemaTypes, typeDefinition, comparator);
+      if (position < 0) {
+        position = -position - 1;
       }
+      schemaTypes.add(position, typeDefinition);
     }
 
     File srcDir = getSourceDir();
-    Map<String, Object> model = new HashMap<String, Object>();
+    Map<String, Object> model = new HashMap<>();
 
     model.put("globalName", this.config.getString("[@global]", "javascriptClient"));
     model.put("schemaTypes", schemaTypes);
     model.put("namespaceFor", new ClientPackageForMethod(packageToNamespaceConversions, this.context));
-    ClientClassnameForMethod classnameFor = new ClientClassnameForMethod(packageToNamespaceConversions, jacksonContext, jackson1Context);
+    ClientClassnameForMethod classnameFor = new ClientClassnameForMethod(packageToNamespaceConversions, jacksonContext);
     model.put("classnameFor", classnameFor);
-    model.put("typeNameFor", new TypeNameForMethod(packageToNamespaceConversions, jacksonContext, jackson1Context));
+    model.put("typeNameFor", new TypeNameForMethod(packageToNamespaceConversions, jacksonContext));
     model.put("simpleNameFor", new SimpleNameWithParamsMethod(classnameFor));
     model.put("jsFileName", getSourceFileName());
     model.put("file", new FileDirective(srcDir, this.enunciate.getLogger()));
     model.put("generatedCodeLicense", this.enunciate.getConfiguration().readGeneratedCodeLicenseFile());
 
-    Set<String> facetIncludes = new TreeSet<String>(this.enunciate.getConfiguration().getFacetIncludes());
+    Set<String> facetIncludes = new TreeSet<>(this.enunciate.getConfiguration().getFacetIncludes());
     facetIncludes.addAll(getFacetIncludes());
-    Set<String> facetExcludes = new TreeSet<String>(this.enunciate.getConfiguration().getFacetExcludes());
+    Set<String> facetExcludes = new TreeSet<>(this.enunciate.getConfiguration().getFacetExcludes());
     facetExcludes.addAll(getFacetExcludes());
     FacetFilter facetFilter = new FacetFilter(facetIncludes, facetExcludes);
 
@@ -179,10 +150,7 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
       try {
         processTemplate(apiTemplate, model);
       }
-      catch (IOException e) {
-        throw new EnunciateException(e);
-      }
-      catch (TemplateException e) {
+      catch (IOException | TemplateException e) {
         throw new EnunciateException(e);
       }
     }
@@ -218,32 +186,16 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
   }
 
   protected void detectAccessorNamingErrors() {
-    if (this.jacksonModule != null) {
-      List<String> namingConflicts = JacksonCodeErrors.findConflictingAccessorNamingErrors(this.jacksonModule.getJacksonContext());
-      if (namingConflicts != null && !namingConflicts.isEmpty()) {
-        error("Jackson naming conflicts have been found:");
-        for (String namingConflict : namingConflicts) {
-          error(namingConflict);
-        }
-        error("These naming conflicts are often between the field and it's associated property, in which case you need to use one or both of the following strategies to avoid the conflicts:");
-        error("1. Explicitly exclude one or the other.");
-        error("2. Put the annotations on the property instead of the field.");
-        throw new EnunciateException("Jackson naming conflicts detected.");
+    List<String> namingConflicts = JacksonCodeErrors.findConflictingAccessorNamingErrors(this.jacksonModule.getJacksonContext());
+    if (namingConflicts != null && !namingConflicts.isEmpty()) {
+      error("Jackson naming conflicts have been found:");
+      for (String namingConflict : namingConflicts) {
+        error(namingConflict);
       }
-    }
-
-    if (this.jackson1Module != null) {
-      List<String> namingConflicts = Jackson1CodeErrors.findConflictingAccessorNamingErrors(this.jackson1Module.getJacksonContext());
-      if (namingConflicts != null && !namingConflicts.isEmpty()) {
-        error("Jackson naming conflicts have been found:");
-        for (String namingConflict : namingConflicts) {
-          error(namingConflict);
-        }
-        error("These naming conflicts are often between the field and it's associated property, in which case you need to use one or both of the following strategies to avoid the conflicts:");
-        error("1. Explicitly exclude one or the other.");
-        error("2. Put the annotations on the property instead of the field.");
-        throw new EnunciateException("Jackson naming conflicts detected.");
-      }
+      error("These naming conflicts are often between the field and it's associated property, in which case you need to use one or both of the following strategies to avoid the conflicts:");
+      error("1. Explicitly exclude one or the other.");
+      error("2. Put the annotations on the property instead of the field.");
+      throw new EnunciateException("Jackson naming conflicts detected.");
     }
   }
 
@@ -277,10 +229,8 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
       }
     });
 
-    configuration.setTemplateExceptionHandler(new TemplateExceptionHandler() {
-      public void handleTemplateException(TemplateException templateException, Environment environment, Writer writer) throws TemplateException {
-        throw templateException;
-      }
+    configuration.setTemplateExceptionHandler((templateException, environment, writer) -> {
+      throw templateException;
     });
 
     configuration.setLocalizedLookup(false);
@@ -335,10 +285,7 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
     try {
       return processTemplate(res, model);
     }
-    catch (TemplateException e) {
-      throw new EnunciateException(e);
-    }
-    catch (IOException e) {
+    catch (TemplateException | IOException e) {
       throw new EnunciateException(e);
     }
   }
@@ -437,7 +384,7 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
    */
   public Map<String, String> getPackageToNamespaceConversions() {
     List<HierarchicalConfiguration> conversionElements = this.config.configurationsAt("package-conversions.convert");
-    HashMap<String, String> conversions = new HashMap<String, String>();
+    HashMap<String, String> conversions = new HashMap<>();
     for (HierarchicalConfiguration conversionElement : conversionElements) {
       conversions.put(conversionElement.getString("[@from]"), conversionElement.getString("[@to]"));
     }
@@ -446,7 +393,7 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
 
   public Set<String> getFacetIncludes() {
     List<Object> includes = this.config.getList("facets.include[@name]");
-    Set<String> facetIncludes = new TreeSet<String>();
+    Set<String> facetIncludes = new TreeSet<>();
     for (Object include : includes) {
       facetIncludes.add(String.valueOf(include));
     }
@@ -455,7 +402,7 @@ public class JavaScriptClientModule extends BasicGeneratingModule implements Api
 
   public Set<String> getFacetExcludes() {
     List<Object> excludes = this.config.getList("facets.exclude[@name]");
-    Set<String> facetExcludes = new TreeSet<String>();
+    Set<String> facetExcludes = new TreeSet<>();
     for (Object exclude : excludes) {
       facetExcludes.add(String.valueOf(exclude));
     }
