@@ -25,7 +25,6 @@ import com.webcohesion.enunciate.api.ApiRegistry;
 import com.webcohesion.enunciate.api.InterfaceDescriptionFile;
 import com.webcohesion.enunciate.api.PathSummary;
 import com.webcohesion.enunciate.api.datatype.Syntax;
-import com.webcohesion.enunciate.api.resources.Method;
 import com.webcohesion.enunciate.api.resources.Resource;
 import com.webcohesion.enunciate.api.resources.ResourceApi;
 import com.webcohesion.enunciate.api.resources.ResourceGroup;
@@ -35,16 +34,15 @@ import com.webcohesion.enunciate.facets.FacetFilter;
 import com.webcohesion.enunciate.javac.javadoc.DefaultJavaDocTagHandler;
 import com.webcohesion.enunciate.module.*;
 import com.webcohesion.enunciate.modules.jaxb.JaxbModule;
-import com.webcohesion.enunciate.modules.jaxb.util.PrefixMethod;
 import com.webcohesion.enunciate.util.freemarker.FileDirective;
 import com.webcohesion.enunciate.util.freemarker.FreemarkerUtil;
 import freemarker.cache.URLTemplateLoader;
-import freemarker.core.Environment;
 import freemarker.template.Configuration;
 import freemarker.template.Template;
 import freemarker.template.TemplateException;
-import freemarker.template.TemplateExceptionHandler;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.configuration2.HierarchicalConfiguration;
+import org.apache.commons.configuration2.tree.ImmutableNode;
+import org.apache.commons.lang3.StringUtils;
 
 import java.io.*;
 import java.net.MalformedURLException;
@@ -52,6 +50,7 @@ import java.net.URI;
 import java.net.URL;
 import java.util.*;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * <h1>Swagger Module</h1>
@@ -77,7 +76,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
 
   @Override
   public List<DependencySpec> getDependencySpecifications() {
-    return Arrays.asList((DependencySpec) new DependencySpec() {
+    return List.of(new DependencySpec() {
       @Override
       public boolean accept(EnunciateModule module) {
         if (module instanceof JaxbModule) {
@@ -101,9 +100,9 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
   }
 
   /**
-   * The URL to "swagger.fmt".
+   * The URL to "openapi.fmt".
    *
-   * @return The URL to "swagger.fmt".
+   * @return The URL to "openapi.fmt".
    */
   protected URL getTemplateURL() throws MalformedURLException {
     String template = getFreemarkerProcessingTemplate();
@@ -111,7 +110,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
       return this.enunciate.getConfiguration().resolveFile(template).toURI().toURL();
     }
     else {
-      return SwaggerModule.class.getResource("swagger.fmt");
+      return SwaggerModule.class.getResource("openapi.fmt");
     }
   }
 
@@ -140,9 +139,9 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
 
       @Override
       public InterfaceDescriptionFile getSwaggerUI() {
-        Set<String> facetIncludes = new TreeSet<String>(enunciate.getConfiguration().getFacetIncludes());
+        Set<String> facetIncludes = new TreeSet<>(enunciate.getConfiguration().getFacetIncludes());
         facetIncludes.addAll(getFacetIncludes());
-        Set<String> facetExcludes = new TreeSet<String>(enunciate.getConfiguration().getFacetExcludes());
+        Set<String> facetExcludes = new TreeSet<>(enunciate.getConfiguration().getFacetExcludes());
         facetExcludes.addAll(getFacetExcludes());
         FacetFilter facetFilter = new FacetFilter(facetIncludes, facetExcludes);
 
@@ -182,7 +181,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
         srcDir.mkdirs();
       }
 
-      Map<String, Object> model = new HashMap<String, Object>();
+      Map<String, Object> model = new HashMap<>();
       model.put("apis", this.resourceApis);
       boolean includeApplicationPath = isIncludeApplicationPath();
       Map<String, SwaggerResource> resourcesByPath = new TreeMap<>();
@@ -205,7 +204,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
                 resourcePath = "/" + resourceGroup.getRelativeContextPath() + resourcePath;
               }
               if (path.equals(resourcePath)) {
-                swaggerResource.getMethods().addAll(resource.getMethods());
+                resource.getMethods().forEach(swaggerResource::addMethod);
               }
             }
           }
@@ -231,17 +230,13 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
       model.put("dataFormatNameFor", new DataFormatNameForMethod());
       model.put("constraintsFor", new ConstraintsForMethod());
       model.put("uniqueMediaTypesFor", new UniqueMediaTypesForMethod());
-      model.put("jsonExamplesFor", new JsonExamplesForMethod());
       model.put("jsonExampleFor", new JsonExampleForMethod());
       model.put("operationIdFor", new OperationIdForMethod());
       model.put("responsesOf", new ResponsesOfMethod());
-      model.put("findBestDataType", new FindBestDataTypeMethod());
       model.put("validParametersOf", new ValidParametersMethod());
       model.put("definitionIdFor", new DefinitionIdForMethod());
       model.put("prefixes", ns2prefix);
-      model.put("host", getHost());
-      model.put("schemes", getSchemes());
-      model.put("basePath", getBasePath());
+      model.put("servers", getServers());
       buildBase(srcDir);
       try {
         processTemplate(getTemplateURL(), model);
@@ -250,20 +245,16 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
         throw new EnunciateException(e);
       }
 
-      Set<File> jsonFilesToValidate = new HashSet<File>();
+      Set<File> jsonFilesToValidate = new HashSet<>();
       gatherJsonFiles(jsonFilesToValidate, srcDir);
       ObjectMapper mapper = new ObjectMapper();
       for (File file : jsonFilesToValidate) {
-        FileReader reader = new FileReader(file);
-        try {
+        try (FileReader reader = new FileReader(file)) {
           mapper.readTree(reader);
         }
         catch (JsonProcessingException e) {
           warn("Error processing %s.", file.getAbsolutePath());
           throw e;
-        }
-        finally {
-          reader.close();
         }
       }
 
@@ -273,53 +264,31 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
     }
   }
 
-  protected String getHost() {
-    String host = this.config.getString("[@host]", null);
-
-    if (host == null) {
-      String root = enunciate.getConfiguration().getApplicationRoot();
-      if (root != null) {
-        try {
-          URI uri = URI.create(root);
-          host = uri.getHost();
-          if (uri.getPort() > 0) {
-            host += ":" + uri.getPort();
-          }
-        }
-        catch (IllegalArgumentException e) {
-          host = null;
-        }
-      }
-    }
-
-    return host;
-  }
-
-  protected String[] getSchemes() {
-    return this.config.getStringArray("scheme");
-  }
-
   protected String getBasePath() {
-    String basePath = this.config.getString("[@basePath]", null);
+    String basePath = null;
 
-    if (basePath == null) {
-      String root = enunciate.getConfiguration().getApplicationRoot();
-      if (root != null) {
-        try {
-          URI uri = URI.create(root);
-          basePath = uri.getPath();
-        }
-        catch (IllegalArgumentException e) {
-          basePath = null;
-        }
+    String root = enunciate.getConfiguration().getApplicationRoot();
+    if (root != null) {
+      try {
+        URI uri = URI.create(root);
+        basePath = uri.getPath();
       }
-
-      while (basePath != null && basePath.endsWith("/")) {
-        basePath = basePath.substring(0, basePath.length() - 1);
+      catch (IllegalArgumentException ignored) {
       }
     }
+    
+    basePath = StringUtils.removeEnd(basePath, "/");
 
     return basePath;
+  }
+  
+  protected List<SwaggerServer> getServers() {
+    List<HierarchicalConfiguration> serverConfigs = this.config.configurationsAt("server");
+    List<SwaggerServer> servers = serverConfigs.stream().map(serverConfig -> new SwaggerServer(serverConfig.getString("[@url]"), serverConfig.getString("[@description]", null))).collect(Collectors.toList());
+    if (servers.isEmpty()) {
+      servers = Collections.singletonList(new SwaggerServer(getBasePath(), null)); 
+    }
+    return servers;
   }
 
   private boolean isIncludeApplicationPath() {
@@ -348,10 +317,8 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
       }
     });
 
-    configuration.setTemplateExceptionHandler(new TemplateExceptionHandler() {
-      public void handleTemplateException(TemplateException templateException, Environment environment, Writer writer) throws TemplateException {
-        throw templateException;
-      }
+    configuration.setTemplateExceptionHandler((templateException, environment, writer) -> {
+      throw templateException;
     });
 
     configuration.setLocalizedLookup(false);
@@ -446,7 +413,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
 
   public Set<String> getFacetIncludes() {
     List<Object> includes = this.config.getList("facets.include[@name]");
-    Set<String> facetIncludes = new TreeSet<String>();
+    Set<String> facetIncludes = new TreeSet<>();
     for (Object include : includes) {
       facetIncludes.add(String.valueOf(include));
     }
@@ -455,7 +422,7 @@ public class SwaggerModule extends BasicGeneratingModule implements ApiFeaturePr
 
   public Set<String> getFacetExcludes() {
     List<Object> excludes = this.config.getList("facets.exclude[@name]");
-    Set<String> facetExcludes = new TreeSet<String>();
+    Set<String> facetExcludes = new TreeSet<>();
     for (Object exclude : excludes) {
       facetExcludes.add(String.valueOf(exclude));
     }
